# drone-stabilization-algorithm-task

./: README.md  pyproject.toml
drone_stabilization_algorithm_task/: __init__.py  __main__.py
